# Credzer

./: Readme.md  pyproject.toml
credzer/: credzer.py
credzer/lib/: args.py  conf.py  display.py  model.py  parser.py  router.py  static.py
